# MACVIN

./: .gitignore  README.md  checkdata.py  cruises.csv  excludefiles.csv  full_run.sh  move_files.sh  pipeline.py  pyproject.toml  runmackerelclassifier.py  runreports.py  setup_folders.py  test_run.sh
koronaprocessing/: plot_problem_data.py  requirements.txt  runmackerelclassifier.py  testmackerelclassifier.py
src/macvin/: analyzedata.py  flows.py  logging.py  pipeline.py  status.py  tasks.py  test.py
