[project]
name = "macvin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crimac-reportgeneration",
    "dask>=2025.12.0",
    "netcdf4>=1.7.3",
    "pandas>=2.3.3",
    "xarray>=2025.6.1",
]

[dependency-groups]
dev = [
    "ipython>=8.37.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
    "ty>=0.0.14",
]

[project.scripts]

macvin-test = "macvin.test:main"
macvin-status = "macvin.status:main"
macvin-ek500conversion = "macvin.pipeline:ek500conversion"
macvin-idxprocessing = "macvin.pipeline:idxprocessing"
macvin-preprocessing = "macvin.pipeline:preprocessing"
macvin-reports = "macvin.pipeline:reports"
macvin-lufreports = "macvin.pipeline:lufreports"


[tool.uv]
package = true

[tool.uv.sources]
crimac-reportgeneration = { git = "ssh://git@git.imr.no/crimac-wp4-machine-learning/CRIMAC-reportgeneration-zarr.git" }
